tests/pos/i5006.scala
object i0 {
  def f: Int = asInstanceOf[Int].toInt
}

class i2 {
  def f: Int = asInstanceOf[Int].toInt
}

trait i3 {
  def f: Int = asInstanceOf[Int].toInt
}
